# Lynx

./: .gitignore  CLEANUP.md  CMakeLists.txt  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  aliases.sample  demo.sh  release.sh  setup_plugins.sh  uninstall.sh
.github/workflows/: build.yml
docs/: Installation-Guide.md  Plugin-Development.md  README.md  Theme-Development.md
examples/plugins/: build_plugin.sh  fileutils_plugin.cpp  template_plugin.cpp  time_plugin.cpp
examples/themes/: cyberpunk.theme  minimal.theme  ocean.json
include/: command.h  plugin.h  shell.h  theme_manager.h  utils.h
src/: alias.cpp  command.cpp  config.cpp  plugin.cpp  shell.cpp  theme.cpp  theme_manager.cpp  utils.cpp
themes/: dark.theme
